[package]
name = "headache"
version = "0.3.0"
license = "MIT"
edition = "2021"
documentation = "https://carloseduardol.github.io/headache/headache/"
repository = "https://github.com/CarlosEduardoL/headache"

[dependencies]
clap = { version = "4.3.3", features = ["derive"], optional = true }
dynasmrt = "2.0.0"

[features]
build-binary = ["clap"]

[[bin]]
name = "headache"
path = "src/cli/main.rs"
required-features = ["build-binary"]
